# ansible-collection-catalystwan

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  galaxy.yml  pyproject.toml  requirements.txt
.dev_dir/: example_dev_vars.yml  example_playground.yml  health_checks.yml  initial_configuration.yml  onboarding_controllers.yml  remove_devices_controllers.yml  remove_devices_edges.yml  software_upgrades_with_remote_server.yml  sync_pnp_edges.yml  validate_and_activate_edges.yml  vmanage_mode.yml  wait_for_api_server.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ansible-doc-validation.yml  galaxy-importer.yml  linters.yml  release-from-tag.yml
docs/: CONTRIBUTING.md  SECURITY.md
meta/: runtime.yml
playbooks/tests/: test_backup_and_restore.yml  test_backup_and_restore_running_config.yml  test_cedge_software_upgrades_local.yml  test_cedge_software_upgrades_remote.yml  test_device_templates.yml  test_device_templates_info.yml  test_feature_templates.yml  test_module_active_sessions_info.yml  test_module_administration_settings.yml  test_module_alarms.yml  test_module_cluster_management.yml  test_module_config_groups.yml  test_module_device_templates_recovery.yml  test_module_devices_certificates.yml  test_module_devices_info.yml  test_module_devices_wan_edges.yml  test_module_health_checks.yml  test_module_server_info.yml  test_module_users.yml  test_module_vmanage_mode.yml  test_software_repository_local_images.yml  test_software_repository_remote_server_operations.yml  test_templates_attachment.yml  test_templates_removal.yml  test_vbond_software_upgrades_local.yml  test_vbond_software_upgrades_remote.yml  test_vmanage_software_upgrades_local.yml  test_vmanage_software_upgrades_remote.yml  test_vsmart_software_upgrades_local.yml  test_vsmart_software_upgrades_remote.yml
plugins/: README.md
plugins/modules/: alarms.py  (+25 more)
tools/: feature_template_docs_generator.py  feature_template_module_args_generator.py
utils/: docs_fragments_template.j2  ft_device_model.j2  ft_generator.py
(+119 files in other folders)
